compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__case__alternative_patter_with_string_alias.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/case.rs
assertion_line: 108
expression: "\npub fn main(x) {\n  case x {\n    \"a\" as letter <> _ | \"b\" as letter <> _ -> letter\n    _ -> \"wibble\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    "a" as letter <> _ | "b" as letter <> _ -> letter
    _ -> "wibble"
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(binary()) -> binary().
main(X) ->
    case X of
        <<"a"/utf8, _/binary>> ->
            Letter = <<"a"/utf8>>,
            Letter;

        <<"b"/utf8, _/binary>> ->
            Letter = <<"b"/utf8>>,
            Letter;

        _ ->
            <<"wibble"/utf8>>
    end.
