compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__case__not.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/case.rs
assertion_line: 53
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x, y) {
  case x {
    _ if !y -> 0
    _ -> 1
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/2]).

-file("project/test/my/mod.gleam", 1).
-spec main(any(), boolean()) -> integer().
main(X, Y) ->
    case X of
        _ when not Y ->
            0;

        _ ->
            1
    end.
