compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__case__positive_zero_pattern.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/case.rs
assertion_line: 24
expression: "\npub fn main(x) {\n  case x {\n    0.0 -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0.0 -> 1
    _ -> 2
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/1]).

-file("project/test/my/mod.gleam", 2).
-spec main(float()) -> integer().
main(X) ->
    case X of
        +0.0 ->
            1;

        _ ->
            2
    end.
