compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__case__spread_empty_list_assigning.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/case.rs
assertion_line: 94
expression: "\npub fn main() {\n  case [] {\n    [..rest] -> rest\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case [] {
    [..rest] -> rest
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> list(any()).
main() ->
    case [] of
        Rest ->
            Rest
    end.
